--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "dashboard-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "commonjs",
-  "scripts": {
-    "start": "node ./dist/main.js",
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "Pavel Kondratyev",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "inversify": "^6.0.1",
-    "reflect-metadata": "^0.1.13",
-    "tslog": "^4.8.2"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.17",
-    "typescript": "^5.0.4"
-  }
+	"name": "dashboard-api",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"type": "commonjs",
+	"scripts": {
+		"start": "node ./dist/main.js",
+		"lint": "eslint ./src/**",
+		"lint:fix": "eslint ./src/** --fix",
+		"build": "tsc",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "Pavel Kondratyev",
+	"license": "ISC",
+	"dependencies": {
+		"express": "^4.18.2",
+		"inversify": "^6.0.1",
+		"reflect-metadata": "^0.1.13",
+		"tslog": "^4.8.2"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.17",
+		"@typescript-eslint/eslint-plugin": "^5.59.2",
+		"@typescript-eslint/parser": "^5.59.2",
+		"eslint": "^8.40.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"prettier": "^2.8.8",
+		"typescript": "^5.0.4"
+	}
 }
