--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"author": "Pavel Kondratyev",
 	"license": "ISC",
 	"dependencies": {
+		"body-parser": "^1.20.2",
 		"express": "^4.18.2",
 		"inversify": "^6.0.1",
 		"reflect-metadata": "^0.1.13",
