--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"author": "Pavel Kondratyev",
 	"license": "ISC",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
 		"express": "^4.18.2",
 		"inversify": "^6.0.1",
@@ -24,6 +25,7 @@
 		"tslog": "^4.8.2"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
 		"@types/express": "^4.17.17",
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
 		"@typescript-eslint/parser": "^5.59.2",
