--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"dev:inspect": "nodemon -e ts,json --exec node --inspect -r ts-node/register src/main.ts",
 		"lint": "eslint ./src/**",
 		"lint:fix": "eslint ./src/** --fix",
+		"generate": "prisma generate",
+		"migrate": "prisma migrate dev",
 		"build": "tsc",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -17,6 +19,7 @@
 	"author": "Pavel Kondratyev",
 	"license": "ISC",
 	"dependencies": {
+		"@prisma/client": "^4.14.0",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
 		"class-transformer": "^0.5.1",
@@ -37,6 +40,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"nodemon": "^2.0.22",
 		"prettier": "^2.8.8",
+		"prisma": "^4.14.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.4"
 	}
