--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
 	"rules": {
 		"@typescript-eslint/ban-types": "off",
 		"@typescript-eslint/no-unused-vars": ["off"],
+		"@typescript-eslint/no-var-requires": ["warn"],
 		"@typescript-eslint/no-explicit-any": "off",
 		"@typescript-eslint/explicit-function-return-type": ["warn"],
 		"prettier/prettier": [
