--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"generate": "prisma generate",
 		"migrate": "prisma migrate dev",
 		"build": "tsc",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest"
 	},
 	"keywords": [],
 	"author": "Pavel Kondratyev",
@@ -34,15 +34,18 @@
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.2",
 		"@types/express": "^4.17.17",
+		"@types/jest": "^29.5.1",
 		"@types/jsonwebtoken": "^9.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
 		"@typescript-eslint/parser": "^5.59.2",
 		"eslint": "^8.40.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
+		"jest": "^29.5.0",
 		"nodemon": "^2.0.22",
 		"prettier": "^2.8.8",
 		"prisma": "^4.14.0",
+		"ts-jest": "^29.1.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.4"
 	}
