--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"generate": "prisma generate",
 		"migrate": "prisma migrate dev",
 		"build": "tsc",
-		"test": "jest"
+		"test": "jest",
+		"test:e2e": "jest --config jest.e2e.config.ts --coverage"
 	},
 	"keywords": [],
 	"author": "Pavel Kondratyev",
@@ -36,6 +37,7 @@
 		"@types/express": "^4.17.17",
 		"@types/jest": "^29.5.1",
 		"@types/jsonwebtoken": "^9.0.2",
+		"@types/supertest": "^2.0.12",
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
 		"@typescript-eslint/parser": "^5.59.2",
 		"eslint": "^8.40.0",
@@ -45,6 +47,7 @@
 		"nodemon": "^2.0.22",
 		"prettier": "^2.8.8",
 		"prisma": "^4.14.0",
+		"supertest": "^6.3.3",
 		"ts-jest": "^29.1.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.4"
